<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track Attendance</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="action_logout">Logout</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_all_attendance">All Attendance</string>
    <string name="action_clear_attendance">Clear Attendance</string>
    <string name="action_generate_pdf">Generate PDF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>